crates/ink/tests/ui/contract/fail/cfg/cfg-forbidden-usage-02.stderr
error: The feature `std` is not allowed in `cfg`.

       Allowed in `#[cfg(…)]`:
       - `test`
       - `feature` (without `std`)
       - `any`
       - `not`
       - `all`
  --> tests/ui/contract/fail/cfg/cfg-forbidden-usage-02.rs:18:19
   |
18 |         #[cfg(not(feature = "std"))]
   |                   ^^^^^^^
